--- a/i3/config.d/appearance.conf
+++ b/i3/config.d/appearance.conf
@@ -17,9 +17,9 @@ set_from_resource $cyan        color14 #000000
 set_from_resource $white       color15 #000000
 
 # Use custom colors for black
-# set $black       #282828
-# set $darkblack   #1d2021
-# set $transparent #282828
+set $black       #282828
+set $darkblack   #1d2021
+set $transparent #282828
 
 #                       BORDER      BACKGROUND  TEXT        INDICATOR   CHILD_BORDER
 client.focused          $black      $black      $white      $dark       $darkblack
