--- a/i3/config.d/keybindings.conf
+++ b/i3/config.d/keybindings.conf
@@ -11,8 +11,12 @@ bindsym Mod1+Tab exec --no-startup-id rofi -show window
 # kill focused window
 bindsym $mod+Shift+q kill
 
+# reload the configuration file
 bindsym $mod+Shift+c reload
+
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 bindsym $mod+Shift+e exec "i3-msg exit"
 
 # Change focus
@@ -77,4 +81,5 @@ mode "resize" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
+
 bindsym $mod+r mode "resize"
