--- a/i3/config.d/workspaces.conf
+++ b/i3/config.d/workspaces.conf
@@ -34,3 +34,18 @@ bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
+
+# Workspace assignment
+assign [class="^Terminator$"] → $ws1
+assign [class="^Code$"] → $ws2
+assign [class="^Google-chrome$"] → $ws3
+assign [class="^Slack$"] → $ws4
+# assign [class="^Thunderbird$"] → $ws5
+# assign [class="^Transmission-gtk$"] → $ws6
+# assign [class="^vlc$"] → $ws7
+# assign [class="^obs$"] → $ws7
+# assign [class="^Skype$"] → $ws8
+# assign [class="^Messenger for Desktop$"] → $ws8
+# assign [class="^Nautilus$"] → $ws9
+# assign [class="^Filezilla$"] → $ws9
+# assign [class="^Evince$"] → $ws10
