--- a/i3/config.d/monitor.conf
+++ b/i3/config.d/monitor.conf
@@ -1,3 +1,12 @@
+# Multi monitor setup
+
+# Home Monitors
+set $home_monitor_left "HDMI-0"
+set $home_monitor_right "DP-4"
 exec_always --no-startup-id xrandr \
-            --output HDMI-0 --mode 3440x1440 --pos 0x0 --rotate normal --primary \
-            --output DP-4 --mode 3440x1440 --pos 3440x0 --rotate normal
+            --output $home_monitor_left --mode 3440x1440 --pos 0x0 --rotate normal --primary \
+            --output $home_monitor_right --mode 3440x1440 --pos 3440x0 --rotate normal
+
+# Assign Workspace default monitors
+workspace $ws1 output $home_monitor_left
+workspace $ws2 output $home_monitor_right
