--- a/i3/config.d/vars.conf
+++ b/i3/config.d/vars.conf
@@ -1,3 +1,6 @@
+font pango:Unifont FontAwesome 8
+floating_modifier $mod
+
 workspace_auto_back_and_forth yes
 force_display_urgency_hint 0 ms
 focus_on_window_activation urgent
