--- a/i3/config.d/apps.conf
+++ b/i3/config.d/apps.conf
@@ -4,6 +4,9 @@ for_window [window_role="bubble"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [window_role="Preferences"] floating enable
 
+# TODO: find a way to make this work
+for_window [window_role="Zoom"] floating enable
+
 for_window [window_type="dialog"] floating enable
 for_window [window_type="menu"] floating enable
 
@@ -11,3 +14,4 @@ for_window [window_type="menu"] floating enable
 # screenshot
 bindsym --release Print exec --no-startup-id "maim -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
+
