fix - move variables to global scope
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/i3/config.d/statusbar.conf
+++ b/i3/config.d/statusbar.conf
@@ -13,16 +13,15 @@ bar {
     strip_workspace_numbers yes
     mode hide
 
-#     colors {
-#         statusline         $white
-#         background         $transparent 
-#         separator          $red
-
-# #                          BORDER       BACKGROUND   TEXT
-#         focused_workspace  $white      $transparent $white
-#         inactive_workspace $transparent $transparent $white
-#         active_workspace   $transparent $transparent $red
-#         urgent_workspace   $transparent $transparent $red
-#         binding_mode       $white      $transparent $white
-#     }
+     colors {
+         statusline         $white
+         background         $transparent 
+         separator          $red
+ #                          BORDER       BACKGROUND   TEXT
+         focused_workspace  $white      $transparent $white
+         inactive_workspace $transparent $transparent $white
+         active_workspace   $transparent $transparent $red
+         urgent_workspace   $transparent $transparent $red
+         binding_mode       $white      $transparent $white
+     }
 }
