--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,41 @@
 # i3 config file (v4)
 set $mod Mod4
 
+# Workspace
+set $ws1  "1:  "
+set $ws2  "2:  "
+set $ws3  "3:  "
+set $ws4  "4:  "
+set $ws5  "5:  "
+set $ws6  "6:  "
+set $ws7  "7:  "
+set $ws8  "8:  "
+set $ws9  "9:  "
+set $ws10 "10:  "
+
+# Color
+set_from_resource $black       color0  #000000
+set_from_resource $darkred     color1  #000000
+set_from_resource $darkgreen   color2  #000000
+set_from_resource $darkyellow  color3  #000000
+set_from_resource $darkblue    color4  #000000
+set_from_resource $darkmagenta color5  #000000
+set_from_resource $darkcyan    color6  #000000
+set_from_resource $darkwhite   color7  #000000
+set_from_resource $darkgrey    color8  #000000
+set_from_resource $red         color9  #000000
+set_from_resource $green       color10 #000000
+set_from_resource $yellow      color11 #000000
+set_from_resource $blue        color12 #000000
+set_from_resource $magenta     color13 #000000
+set_from_resource $cyan        color14 #000000
+set_from_resource $white       color15 #000000
+
+# Use custom colors for black
+set $black       #282828
+set $darkblack   #1d2021
+set $transparent #282828
+
 # Include additional configuration files
 include ~/.config/i3/config.d/vars.conf
 include ~/.config/i3/config.d/appearance.conf
@@ -9,4 +44,5 @@ include ~/.config/i3/config.d/workspaces.conf
 include ~/.config/i3/config.d/statusbar.conf
 include ~/.config/i3/config.d/monitor.conf
 include ~/.config/i3/config.d/apps.conf
+include ~/.config/i3/config.d/float.conf
 include ~/.config/i3/config.d/startup.conf
