--- a/ubuntu/.config/i3/config.d/statusbar.conf
+++ b/ubuntu/.config/i3/config.d/statusbar.conf
@@ -5,13 +5,13 @@ bar {
     status_command i3status
     position top
     font pango:Unifont, FontAwesome 12
-    separator_symbol "■"
+    separator_symbol " ■ "
     bindsym button4 nop
     bindsym button5 nop
     height $height
     tray_padding 0
     strip_workspace_numbers yes
-    mode hide
+    # mode hide
 
      colors {
          statusline         $white
