--- a/ubuntu/.config/i3/config.d/theme.conf
+++ b/ubuntu/.config/i3/config.d/theme.conf
@@ -1,3 +1,5 @@
+font pango:Unifont FontAwesome 8
+
 #                       BORDER      BACKGROUND  TEXT        INDICATOR   CHILD_BORDER
 client.focused          $black      $black      $white      $dark       $darkblack
 client.unfocused        $black      $black      $darkwhite  $darkblack  $darkblack
