--- a/ubuntu/.config/i3/config.d/floating_windows.conf
+++ b/ubuntu/.config/i3/config.d/floating_windows.conf
@@ -1,3 +1,7 @@
+floating_modifier $mod
+floating_minimum_size -1 x -1
+floating_maximum_size -1 x -1
+
 for_window [class="^.*"] border pixel 0
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="bubble"] floating enable
@@ -5,9 +9,11 @@ for_window [window_role="task_dialog"] floating enable
 for_window [window_role="Preferences"] floating enable
 for_window [window_role="GtkFileChooserDialog"] floating enable
 for_window [window_role="conversation"] floating enable
-
-# TODO: find a way to make this work
-for_window [window_role="Zoom"] floating enable
-
 for_window [window_type="dialog"] floating enable
 for_window [window_type="menu"] floating enable
+
+for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down $height px
+for_window [class="(?i)qemu-system"] floating enable
+for_window [class="zoom"] floating enable
+for_window [class="(?i)vlc"] floating disable
+
