--- a/ubuntu/.config/i3/config.d/keybindings.conf
+++ b/ubuntu/.config/i3/config.d/keybindings.conf
@@ -17,8 +17,6 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
-bindsym $mod+Shift+e exec "i3-msg exit"
-
 # Change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -54,11 +52,13 @@ bindsym $mod+f fullscreen toggle
 
 # Change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+t layout tabbed
+# bindsym $mod+e layout toggle split
 
 # Toggle floating
 bindsym $mod+Shift+space floating toggle
+
+bindsym $mod+Shift+s sticky toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
@@ -70,16 +70,3 @@ bindsym $mod+a focus parent
 bindsym $mod+z focus child
 
 
-# Resize window (you can also use the mouse for that)
-mode "resize" {
-    bindsym j resize shrink width 10 px or 10 ppt
-    bindsym k resize grow height 10 px or 10 ppt
-    bindsym l resize shrink height 10 px or 10 ppt
-    bindsym semicolon resize grow width 10 px or 10 ppt
-
-    # Back to normal mode
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
