--- a/ubuntu/.config/i3/config.d/autostart.conf
+++ b/ubuntu/.config/i3/config.d/autostart.conf
@@ -1,4 +1,8 @@
 # Startup
+
+## Composite Manager
+exec --no-startup-id picom -b
+
 exec --no-startup-id i3-msg 'exec code'
 exec --no-startup-id i3-msg 'exec slack'
 exec --no-startup-id i3-msg 'exec terminator'
