--- a/ubuntu/.config/i3/config.d/theme.conf
+++ b/ubuntu/.config/i3/config.d/theme.conf
@@ -6,3 +6,5 @@ client.unfocused        $black      $black      $darkwhite  $darkblack  $darkbla
 client.focused_inactive $black      $black      $darkwhite  $darkblack  $darkblack
 client.urgent           $darkred    $darkred    $black      $darkred    $darkred
 client.background       $black
+
+exec --no-startup-id feh --bg-fill $HOME/.config/wallpapers/i3.png
