refine - center wallpaper

--- a/ubuntu/.config/i3/config.d/theme.conf
+++ b/ubuntu/.config/i3/config.d/theme.conf
@@ -7,4 +7,4 @@ client.focused_inactive $black      $black      $darkwhite  $darkblack  $darkbla
 client.urgent           $darkred    $darkred    $black      $darkred    $darkred
 client.background       $black
 
-exec --no-startup-id feh --bg-fill $HOME/.config/wallpapers/i3.png
+exec --no-startup-id feh --bg-center $HOME/.config/wallpapers/i3.png
