--- a/ubuntu/.config/i3/config.d/applications.conf
+++ b/ubuntu/.config/i3/config.d/applications.conf
@@ -2,13 +2,13 @@
 bindsym --release Print exec --no-startup-id "maim -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 
-set $mode_apps 'Chrome (g), Slack (s), Code (c), Terminator (t)'
+set $mode_apps 'Chrome (g), Slack (s), Code (c), Alacritty (A)'
 bindsym $mod+x mode "$mode_apps"
 mode "$mode_apps" {
     bindsym g mode "default", exec --no-startup-id google-chrome
     bindsym s mode "default", exec --no-startup-id slack
     bindsym c mode "default", exec --no-startup-id code
-    bindsym t mode "default", exec --no-startup-id terminator
+    bindsym t mode "default", exec --no-startup-id alacritty
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
