--- a/ubuntu/.config/i3/config.d/keybindings.conf
+++ b/ubuntu/.config/i3/config.d/keybindings.conf
@@ -1,7 +1,7 @@
 # Keybindings
 
 # start a terminal
-bindsym $mod+Return exec terminator
+bindsym $mod+Return exec alacritty
 
 # start rofi (a program launcher)
 bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,run -show combi"
