--- a/ubuntu/.config/i3/config.d/autostart.conf
+++ b/ubuntu/.config/i3/config.d/autostart.conf
@@ -5,7 +5,7 @@ exec --no-startup-id picom -b
 
 exec --no-startup-id i3-msg 'exec code'
 exec --no-startup-id i3-msg 'exec slack'
-exec --no-startup-id i3-msg 'exec terminator'
+exec --no-startup-id i3-msg 'exec alacritty'
 exec --no-startup-id i3-msg 'exec google-chrome'
 
 
