--- a/ubuntu/.config/i3/config.d/theme.conf
+++ b/ubuntu/.config/i3/config.d/theme.conf
@@ -1,10 +1,12 @@
-font pango:Unifont FontAwesome 8
+font pango:Maple Mono, Fira Code, Unifont, FontAwesome 8
 
-#                       BORDER      BACKGROUND  TEXT        INDICATOR   CHILD_BORDER
-client.focused          $black      $black      $white      $dark       $darkblack
-client.unfocused        $black      $black      $darkwhite  $darkblack  $darkblack
-client.focused_inactive $black      $black      $darkwhite  $darkblack  $darkblack
-client.urgent           $darkred    $darkred    $black      $darkred    $darkred
-client.background       $black
+
+#                       BORDER   BACKGROUND  TEXT        INDICATOR    CHILD_BORDER
+client.focused          $base    $base       $text       $mauve       $crust
+client.unfocused        $base    $base       $subtext0   $crust       $crust
+client.focused_inactive $base    $base       $subtext0   $crust       $crust
+client.urgent           $red     $red        $base       $red         $red
+client.background       $base
+
 
 exec --no-startup-id feh --bg-center $HOME/.config/wallpapers/i3.png
