--- a/ubuntu/.config/i3/config.d/statusbar.conf
+++ b/ubuntu/.config/i3/config.d/statusbar.conf
@@ -4,7 +4,7 @@ set $height 36
 bar {
     status_command i3status
     position top
-    font pango:Unifont, FontAwesome 12
+    font pango:Maple Mono, Fira Code, Unifont, FontAwesome 8
     separator_symbol " ■ "
     bindsym button4 nop
     bindsym button5 nop
@@ -14,14 +14,14 @@ bar {
     # mode hide
 
      colors {
-         statusline         $white
-         background         $transparent 
+         statusline         $text
+         background         $base
          separator          $red
- #                          BORDER       BACKGROUND   TEXT
-         focused_workspace  $white      $transparent $white
-         inactive_workspace $transparent $transparent $white
-         active_workspace   $transparent $transparent $red
-         urgent_workspace   $transparent $transparent $red
-         binding_mode       $white      $transparent $white
+         #                  BORDER       BACKGROUND   TEXT
+         focused_workspace  $text        $base        $text
+         inactive_workspace $base        $base        $subtext0
+         active_workspace   $base        $base        $red
+         urgent_workspace   $base        $base        $red
+         binding_mode       $text        $base        $text
      }
 }
