--- a/ubuntu/.config/picom.conf
+++ b/ubuntu/.config/picom.conf
@@ -26,6 +26,7 @@ shadow-exclude = [
     "class_g = 'XTerm'",
     "class_g = 'URxvt'",
     "class_g = 'Alacritty'",
+    "class_g = 'Kitty'",
     "class_g = 'Polybar'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
@@ -42,6 +43,7 @@ fade-exclude = [
     "class_g = 'XTerm'",
     "class_g = 'URxvt'",
     "class_g = 'Alacritty'"
+    "class_g = 'Kitty'"
 ];
 
 # Enable/disable transparency for inactive windows
@@ -55,6 +57,7 @@ opacity-rule = [
     "90:class_g = 'XTerm'",
     "90:class_g = 'URxvt'",
     "90:class_g = 'Alacritty'"
+    "90:class_g = 'Kitty'"
 ];
 
 # Enable/disable vsync to prevent screen tearing
