--- a/ubuntu/.config/i3/config.d/statusbar.conf
+++ b/ubuntu/.config/i3/config.d/statusbar.conf
@@ -1,27 +1,31 @@
-# Status bar settings
-set $height 36
+# # Status bar settings
+# set $height 36
 
-bar {
-    status_command i3status
-    position top
-    font pango:Maple Mono, Fira Code, Unifont, FontAwesome 8
-    separator_symbol " ■ "
-    bindsym button4 nop
-    bindsym button5 nop
-    height $height
-    tray_padding 0
-    strip_workspace_numbers yes
-    # mode hide
+# bar {
+#     status_command i3status
+#     position top
+#     font pango:Maple Mono, Fira Code, Unifont, FontAwesome 8
+#     separator_symbol " ■ "
+#     bindsym button4 nop
+#     bindsym button5 nop
+#     height $height
+#     tray_padding 0
+#     strip_workspace_numbers yes
+#     # mode hide
 
-     colors {
-         statusline         $text
-         background         $base
-         separator          $red
-         #                  BORDER       BACKGROUND   TEXT
-         focused_workspace  $text        $base        $text
-         inactive_workspace $base        $base        $subtext0
-         active_workspace   $base        $base        $red
-         urgent_workspace   $base        $base        $red
-         binding_mode       $text        $base        $text
-     }
-}
+#      colors {
+#          statusline         $text
+#          background         $base
+#          separator          $red
+#          #                  BORDER       BACKGROUND   TEXT
+#          focused_workspace  $text        $base        $text
+#          inactive_workspace $base        $base        $subtext0
+#          active_workspace   $base        $base        $red
+#          urgent_workspace   $base        $base        $red
+#          binding_mode       $text        $base        $text
+#      }
+# }
+
+
+# Launch polybar
+exec_always --no-startup-id ~/.config/polybar/launch.sh
