--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -4,14 +4,15 @@ include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/system.ini
 
 [bar/main]
-wm-restack = bspwm
+wm-restack = i3
 bottom = false
 fixed-center = true
 line-size = 2
 background = ${color.background}
 foreground = ${color.foreground}
-font-0 = "JetBrains Mono Medium:size=9.5;3"
-font-1 = "Iosevka Nerd Font:size=12;3"
+font-0 = "Maple Mono Medium:size=9.5;3"
+font-1 = "JetBrains Mono Medium:size=9.5;3"
+font-2 = "Iosevka Nerd Font:size=12;3"
 modules-left = menu cpu memory temperature filesystem updates
 modules-center = workspaces
 modules-right = network ethernet bluetooth backlight alsa date sysmenu
