--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -11,7 +11,7 @@ click-left = $HOME/.config/rofi/bin/launcher
 type = internal/cpu
 interval = 1
 format = <label>
-format-prefix = "﬙ "
+format-prefix = "CPU "
 format-padding = 1
 label = %percentage%%
 
@@ -19,7 +19,7 @@ label = %percentage%%
 type = internal/memory
 interval = 2
 format = <label>
-format-prefix = " "
+format-prefix = "MEM "
 format-padding = 1
 label = %mb_used%
 
@@ -30,10 +30,10 @@ interval = 10
 fixed-values = true
 format-mounted = <label-mounted>
 format-mounted-alt = <label-mounted-alt>
-format-mounted-prefix = "﫭 "
+format-mounted-prefix = "FS "
 format-mounted-padding = 1
 format-unmounted = <label-unmounted>
-format-unmounted-prefix = " "
+format-unmounted-prefix = "UNM "
 format-unmounted-padding = 1
 label-mounted = %free%
 label-unmounted = %mountpoint%: NULL
@@ -80,38 +80,38 @@ label-empty-padding = 2
 [module/alsa]
 type = internal/alsa
 format-volume = <ramp-volume> <label-volume>
-format-volume-padding = 1 
-format-muted = 婢
+format-volume-padding = 1
+format-muted = MUTE
 format-muted-padding = 1
 label-volume = %percentage%%
-ramp-volume-0 = ﱝ
-ramp-volume-1 = 奄
-ramp-volume-2 = 奄
-ramp-volume-3 = 奔
-ramp-volume-4 = 奔
-ramp-volume-5 = 奔
-ramp-volume-6 = 墳
-ramp-volume-7 = 墳
-ramp-volume-8 = 墳
-ramp-volume-9 = 墳
-ramp-headphones-0 = 
-ramp-headphones-1 = 
+ramp-volume-0 = VOL0
+ramp-volume-1 = VOL1
+ramp-volume-2 = VOL2
+ramp-volume-3 = VOL3
+ramp-volume-4 = VOL4
+ramp-volume-5 = VOL5
+ramp-volume-6 = VOL6
+ramp-volume-7 = VOL7
+ramp-volume-8 = VOL8
+ramp-volume-9 = VOL9
+ramp-headphones-0 = HP0
+ramp-headphones-1 = HP1
 
 [module/backlight]
 type = internal/xbacklight
 card = ${system.graphics_card}
 format = <ramp> <label>
 label = %percentage%%
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
-ramp-6 = 
-ramp-7 = 
-ramp-8 = 
-ramp-9 = 
+ramp-0 = BL0
+ramp-1 = BL1
+ramp-2 = BL2
+ramp-3 = BL3
+ramp-4 = BL4
+ramp-5 = BL5
+ramp-6 = BL6
+ramp-7 = BL7
+ramp-8 = BL8
+ramp-9 = BL9
 format-padding = 1
 
 [module/battery]
@@ -122,7 +122,7 @@ adapter = ${system.adapter}
 poll-interval = 2
 time-format = %H:%M
 format-charging = "<animation-charging> <label-charging> "
-format-charging-prefix = " "
+format-charging-prefix = "CHG "
 format-charging-prefix-font = 1
 format-charging-padding = 1
 format-discharging = "<ramp-capacity> <label-discharging> "
@@ -130,28 +130,28 @@ format-discharging-padding = 1
 label-charging = %percentage%%
 label-discharging = %percentage%%
 format-full = "<label-full> "
-format-full-prefix = " "
+format-full-prefix = "FULL "
 format-full-padding = 1
 label-full = %percentage%%
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-animation-charging-6 = 
-animation-charging-7 = 
-animation-charging-8 = 
-animation-charging-9 = 
+ramp-capacity-0 = CAP0
+ramp-capacity-1 = CAP1
+ramp-capacity-2 = CAP2
+ramp-capacity-3 = CAP3
+ramp-capacity-4 = CAP4
+ramp-capacity-5 = CAP5
+ramp-capacity-6 = CAP6
+ramp-capacity-8 = CAP8
+ramp-capacity-9 = CAP9
+animation-charging-0 = CHG0
+animation-charging-1 = CHG1
+animation-charging-2 = CHG2
+animation-charging-3 = CHG3
+animation-charging-4 = CHG4
+animation-charging-5 = CHG5
+animation-charging-6 = CHG6
+animation-charging-7 = CHG7
+animation-charging-8 = CHG8
+animation-charging-9 = CHG9
 animation-charging-framerate = 700
 
 [module/date]
@@ -173,10 +173,10 @@ format-padding = 1
 type = internal/network
 interface = ${system.network_interface_wireless}
 format-connected = <label-connected>
-format-connected-prefix = "直 "
+format-connected-prefix = "NET "
 format-connected-padding = 1
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = "睊 "
+format-disconnected-prefix = "OFF "
 format-disconnected-padding = 1
 label-connected = "%{A1:networkmanager_dmenu &:}%essid%%{A}"
 label-disconnected = "%{A1:networkmanager_dmenu &:}Offline%{A}"
@@ -185,10 +185,10 @@ label-disconnected = "%{A1:networkmanager_dmenu &:}Offline%{A}"
 type = internal/network
 interface = ${system.network_interface_wired}
 format-connected = <label-connected>
-format-connected-prefix = "歷 "
+format-connected-prefix = "ETH "
 format-connected-padding = 1
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = "轢 "
+format-disconnected-prefix = "OFF "
 format-disconnected-padding = 1
 label-connected = "%{A1:networkmanager_dmenu &:}%downspeed%|%upspeed%%{A}"
 label-disconnected = "{%{A1:networkmanager_dmenu &:}Offline%{A}"
@@ -204,16 +204,16 @@ format-warm = <ramp> <label-warm>
 label = %temperature-c%
 label-warm = %temperature-c%
 label-warm-foreground = ${color.red}
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
-ramp-6 = 
-ramp-7 = 
-ramp-8 = 
-ramp-9 = 
+ramp-0 = TEMP0
+ramp-1 = TEMP1
+ramp-2 = TEMP2
+ramp-3 = TEMP3
+ramp-4 = TEMP4
+ramp-5 = TEMP5
+ramp-6 = TEMP6
+ramp-7 = TEMP7
+ramp-8 = TEMP8
+ramp-9 = TEMP9
 
 [module/updates]
 type = custom/script
@@ -222,7 +222,7 @@ interval = 180
 format = <label>
 label = %output%
 format-padding = 1
-format-prefix = "ﮮ "
+format-prefix = "UPD "
 
 [module/sysmenu]
 type = custom/text
