Add nerd font script

--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -11,8 +11,9 @@ line-size = 2
 background = ${color.background}
 foreground = ${color.foreground}
 font-0 = "Maple Mono Medium:size=9.5;3"
-font-1 = "JetBrains Mono Medium:size=9.5;3"
-font-2 = "Iosevka Nerd Font:size=12;3"
+font-1 = "Fira Code Medium:size=9.5;3"
+font-2 = "JetBrains Mono Medium:size=9.5;3"
+font-3 = "Iosevka Nerd Font:size=12;3"
 modules-left = menu cpu memory temperature filesystem updates
 modules-center = workspaces
 modules-right = network ethernet bluetooth backlight alsa date sysmenu
