--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -41,23 +41,8 @@ label-unmounted = %mountpoint%: NULL
 # Center
 [module/workspaces]
 type = internal/xworkspaces
-pin-workspaces = false
-icon-default = 0
-icon-0 = 0;1
-icon-1 = 1;2
-icon-2 = 2;3
-icon-3 = 3;4
-icon-4 = 4;5
-icon-5 = 5;6
-icon-6 = 6;7
-icon-7 = 7;8
+pin-workspaces = true
 format = <label-state>
-
-;; unicode name
-; label-active = %icon%
-; label-occupied = %icon%
-; label-urgent = %icon%
-; label-empty = %icon%
 
 ;; name
 label-active = %name%
