Add Wallpapers, locks

--- a/ubuntu/.config/i3/config.d/theme.conf
+++ b/ubuntu/.config/i3/config.d/theme.conf
@@ -9,4 +9,4 @@ client.urgent           $red     $red        $base       $red         $red
 client.background       $base
 
 
-exec --no-startup-id feh --bg-center $HOME/.config/wallpapers/i3.png
+exec --no-startup-id feh --bg-fill -r -z $HOME/Pictures/Wallpapers
