--- a/ubuntu/.config/kitty/colors.conf
+++ b/ubuntu/.config/kitty/colors.conf
@@ -40,36 +40,36 @@ mark2_background        #F5C2E7
 mark3_foreground        #1E1E2E
 mark3_background        #B5E8E0
 
-# Terminal
+# The 16 terminal colors
 
-# Black
-color0                  #6E6C7E
-color8                  #988BA2
+# black
+color0 #45475A
+color8 #585B70
 
-# Red
-color1                  #F28FAD
-color9                  #F28FAD
+# red
+color1 #F38BA8
+color9 #F38BA8
 
-# Green
-color2                  #ABE9B3
-color10                 #ABE9B3
+# green
+color2  #A6E3A1
+color10 #A6E3A1
 
-# Yellow
-color3                  #FAE3B0
-color11                 #FAE3B0
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
 
-# Blue
-color4                  #96CDFB
-color12                 #96CDFB
+# blue
+color4  #89B4FA
+color12 #89B4FA
 
-# Magenta
-color5                  #F5C2E7
-color13                 #F5C2E7
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
 
-# Cyan
-color6                  #89DCEB
-color14                 #89DCEB
+# cyan
+color6  #94E2D5
+color14 #94E2D5
 
-# White
-color7                  #D9E0EE
-color15                 #D9E0EE
+# white
+color7  #BAC2DE
+color15 #A6ADC8
