--- a/ubuntu/.config/kitty/kitty.conf
+++ b/ubuntu/.config/kitty/kitty.conf
@@ -1,9 +1,10 @@
 # Fonts
-font_family                     Maple Mono
-bold_font                       auto
-italic_font                     auto
-bold_italic_font                auto
-font_size                       10
+# Fonts
+font_family      Maple Mono Regular
+bold_font        Maple Mono Bold
+italic_font      Maple Mono Italic
+bold_italic_font Maple Mono BoldItalic
+font_size 12.0
 
 # Include
 include                         $HOME/.config/kitty/colors.conf
@@ -29,3 +30,5 @@ window_resize_step_lines        1
 
 # Border
 window_border_width             0
+
+linux_display_server            x11
