--- a/ubuntu/.config/kitty/mappings.conf
+++ b/ubuntu/.config/kitty/mappings.conf
@@ -79,4 +79,5 @@ map kitty_mod+a>1               set_background_opacity 1
 map kitty_mod+a>d               set_background_opacity default
 map kitty_mod+delete            clear_terminal reset active
 
+map super+shift+enter           new_os_window_with_cwd
 # Taken From mf-dots
