--- a/ubuntu/.config/i3/config.d/applications.conf
+++ b/ubuntu/.config/i3/config.d/applications.conf
@@ -2,6 +2,12 @@
 bindsym --release Print exec --no-startup-id "maim -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 
+# start rofi (a program launcher)
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/bin/launcher
+bindsym $mod+Shift+d exec --no-startup-id $HOME/.config/rofi/bin/runner
+bindsym Mod1+Tab exec --no-startup-id rofi -show window
+
+
 set $mode_apps 'Chrome (g), Slack (s), Code (c), Kitty (k)'
 bindsym $mod+x mode "$mode_apps"
 mode "$mode_apps" {
@@ -13,7 +19,3 @@ mode "$mode_apps" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-
-
-# Flash Windows
-bindsym $mod+grave	exec --no-startup-id ~/scripts/flash_win.sh
