--- a/ubuntu/.config/i3/config.d/autostart.conf
+++ b/ubuntu/.config/i3/config.d/autostart.conf
@@ -1,7 +1,17 @@
 # Startup
 
+## Autokill
+exec --no-startup-id killall -9 ksuperkey xfce4-power-manager &
+exec --no-startup-id killall dunst;
+
+## Notification Daemon
+exec --no-startup-id dunst &
+
 ## Composite Manager
 exec --no-startup-id picom -b
+
+## Power Manager
+exec --no-startup-id xfce4-power-manager
 
 exec --no-startup-id i3-msg 'exec code'
 exec --no-startup-id i3-msg 'exec slack'
