--- a/ubuntu/.config/i3/config.d/workspaces.conf
+++ b/ubuntu/.config/i3/config.d/workspaces.conf
@@ -25,6 +25,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 # Workspace assignment
 assign [class="^Google-chrome$"] → $ws1
+assign [class="^Firefox$"] → $ws1
 assign [class="^Code$"] → $ws2
-assign [class="^Terminator$"] → $ws3
+assign [class="^Kitty$"] → $ws3
 assign [class="^Slack$"] → $ws4
