--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -215,3 +215,10 @@ content = 
 content-padding = 2
 content-foreground = ${color.red}
 click-left = $HOME/.config/rofi/bin/powermenu
+
+
+[module/i3_mode]
+type = custom/script
+exec = ~/i3_mode.sh
+interval = 1
+label = %output%
