--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -16,7 +16,7 @@ font-2 = "JetBrains Mono Medium:size=9.5;3"
 font-3 = "Iosevka Nerd Font:size=12;3"
 modules-left = menu cpu memory temperature filesystem updates
 modules-center = workspaces
-modules-right = network ethernet bluetooth backlight alsa date sysmenu
+modules-right = network ethernet bluetooth backlight alsa date i3_mode
 height = 40
 width = 95%
 offset-x = 35
