Update Rofi Window

--- a/ubuntu/.config/i3/config.d/applications.conf
+++ b/ubuntu/.config/i3/config.d/applications.conf
@@ -5,7 +5,7 @@ bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.0
 # start rofi (a program launcher)
 bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/bin/launcher
 bindsym $mod+Shift+d exec --no-startup-id $HOME/.config/rofi/bin/runner
-bindsym Mod1+Tab exec --no-startup-id rofi -show window
+bindsym Mod1+Tab exec --no-startup-id rofi -show window -theme $HOME/.config/rofi/config/launcher.rasi
 
 
 set $mode_apps 'Chrome (g), Slack (s), Code (c), Kitty (k)'
