use icon instead of prefix in Polybar

--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -11,17 +11,19 @@ click-left = $HOME/.config/rofi/bin/launcher
 type = internal/cpu
 interval = 1
 format = <label>
-format-prefix = "CPU "
+format-prefix = " "
 format-padding = 1
 label = %percentage%%
+tooltip = "CPU Usage: %percentage%%"
 
 [module/memory]
 type = internal/memory
 interval = 2
 format = <label>
-format-prefix = "MEM "
+format-prefix = " "
 format-padding = 1
 label = %mb_used%
+tooltip = "Memory Usage: %mb_used% MB"
 
 [module/filesystem]
 type = internal/fs
@@ -30,13 +32,14 @@ interval = 10
 fixed-values = true
 format-mounted = <label-mounted>
 format-mounted-alt = <label-mounted-alt>
-format-mounted-prefix = "FS "
+format-mounted-prefix = " "
 format-mounted-padding = 1
 format-unmounted = <label-unmounted>
-format-unmounted-prefix = "UNM "
+format-unmounted-prefix = " "
 format-unmounted-padding = 1
 label-mounted = %free%
 label-unmounted = %mountpoint%: NULL
+tooltip = "Filesystem Free Space: %free%"
 
 # Center
 [module/workspaces]
@@ -66,38 +69,40 @@ label-empty-padding = 2
 type = internal/alsa
 format-volume = <ramp-volume> <label-volume>
 format-volume-padding = 1
-format-muted = MUTE
+format-muted = " MUTE"
 format-muted-padding = 1
 label-volume = %percentage%%
-ramp-volume-0 = VOL0
-ramp-volume-1 = VOL1
-ramp-volume-2 = VOL2
-ramp-volume-3 = VOL3
-ramp-volume-4 = VOL4
-ramp-volume-5 = VOL5
-ramp-volume-6 = VOL6
-ramp-volume-7 = VOL7
-ramp-volume-8 = VOL8
-ramp-volume-9 = VOL9
-ramp-headphones-0 = HP0
-ramp-headphones-1 = HP1
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
+ramp-volume-5 = 
+ramp-volume-6 = 
+ramp-volume-7 = 
+ramp-volume-8 = 
+ramp-volume-9 = 
+ramp-headphones-0 = 
+ramp-headphones-1 = 
+tooltip = "Volume: %percentage%%"
 
 [module/backlight]
 type = internal/xbacklight
 card = ${system.graphics_card}
 format = <ramp> <label>
 label = %percentage%%
-ramp-0 = BL0
-ramp-1 = BL1
-ramp-2 = BL2
-ramp-3 = BL3
-ramp-4 = BL4
-ramp-5 = BL5
-ramp-6 = BL6
-ramp-7 = BL7
-ramp-8 = BL8
-ramp-9 = BL9
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+ramp-5 = 
+ramp-6 = 
+ramp-7 = 
+ramp-8 = 
+ramp-9 = 
 format-padding = 1
+tooltip = "Brightness: %percentage%%"
 
 [module/battery]
 type = internal/battery
@@ -107,7 +112,7 @@ adapter = ${system.adapter}
 poll-interval = 2
 time-format = %H:%M
 format-charging = "<animation-charging> <label-charging> "
-format-charging-prefix = "CHG "
+format-charging-prefix = " "
 format-charging-prefix-font = 1
 format-charging-padding = 1
 format-discharging = "<ramp-capacity> <label-discharging> "
@@ -115,29 +120,26 @@ format-discharging-padding = 1
 label-charging = %percentage%%
 label-discharging = %percentage%%
 format-full = "<label-full> "
-format-full-prefix = "FULL "
+format-full-prefix = " "
 format-full-padding = 1
 label-full = %percentage%%
-ramp-capacity-0 = CAP0
-ramp-capacity-1 = CAP1
-ramp-capacity-2 = CAP2
-ramp-capacity-3 = CAP3
-ramp-capacity-4 = CAP4
-ramp-capacity-5 = CAP5
-ramp-capacity-6 = CAP6
-ramp-capacity-8 = CAP8
-ramp-capacity-9 = CAP9
-animation-charging-0 = CHG0
-animation-charging-1 = CHG1
-animation-charging-2 = CHG2
-animation-charging-3 = CHG3
-animation-charging-4 = CHG4
-animation-charging-5 = CHG5
-animation-charging-6 = CHG6
-animation-charging-7 = CHG7
-animation-charging-8 = CHG8
-animation-charging-9 = CHG9
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
+animation-charging-7 = 
+animation-charging-8 = 
+animation-charging-9 = 
 animation-charging-framerate = 700
+tooltip = "Battery: %percentage%%"
 
 [module/date]
 type = internal/date
@@ -146,6 +148,7 @@ time-alt = %b %d, %G
 format = <label>
 label = %time%
 format-padding = 1
+tooltip = "Date and Time: %time%"
 
 [module/bluetooth]
 type = custom/script
@@ -153,30 +156,33 @@ exec = rofi-bluetooth --status
 interval = 1
 click-left = rofi-bluetooth &
 format-padding = 1
+tooltip = "Bluetooth Status"
 
 [module/network]
 type = internal/network
 interface = ${system.network_interface_wireless}
 format-connected = <label-connected>
-format-connected-prefix = "NET "
+format-connected-prefix = " "
 format-connected-padding = 1
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = "OFF "
+format-disconnected-prefix = " "
 format-disconnected-padding = 1
 label-connected = "%{A1:networkmanager_dmenu &:}%essid%%{A}"
 label-disconnected = "%{A1:networkmanager_dmenu &:}Offline%{A}"
+tooltip = "Network: %essid%"
 
 [module/ethernet]
 type = internal/network
 interface = ${system.network_interface_wired}
 format-connected = <label-connected>
-format-connected-prefix = "ETH "
+format-connected-prefix = " "
 format-connected-padding = 1
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = "OFF "
+format-disconnected-prefix = " "
 format-disconnected-padding = 1
 label-connected = "%{A1:networkmanager_dmenu &:}%downspeed%|%upspeed%%{A}"
-label-disconnected = "{%{A1:networkmanager_dmenu &:}Offline%{A}"
+label-disconnected = "%{A1:networkmanager_dmenu &:}Offline%{A}"
+tooltip = "Ethernet: %downspeed%|%upspeed%"
 
 [module/temperature]
 type = internal/temperature
@@ -189,16 +195,13 @@ format-warm = <ramp> <label-warm>
 label = %temperature-c%
 label-warm = %temperature-c%
 label-warm-foreground = ${color.red}
-ramp-0 = TEMP0
-ramp-1 = TEMP1
-ramp-2 = TEMP2
-ramp-3 = TEMP3
-ramp-4 = TEMP4
-ramp-5 = TEMP5
-ramp-6 = TEMP6
-ramp-7 = TEMP7
-ramp-8 = TEMP8
-ramp-9 = TEMP9
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+format-padding = 1
+tooltip = "Temperature: %temperature-c%°C"
 
 [module/updates]
 type = custom/script
@@ -207,7 +210,8 @@ interval = 180
 format = <label>
 label = %output%
 format-padding = 1
-format-prefix = "UPD "
+format-prefix = " "
+tooltip = "Updates Available"
 
 [module/sysmenu]
 type = custom/text
@@ -215,10 +219,11 @@ content = 
 content-padding = 2
 content-foreground = ${color.red}
 click-left = $HOME/.config/rofi/bin/powermenu
-
+tooltip = "Power Menu"
 
 [module/i3_mode]
 type = custom/script
 exec = ~/i3_mode.sh
 interval = 1
 label = %output%
+tooltip = "i3 Mode: %output%"
