Fix script path

--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -223,7 +223,7 @@ tooltip = "Power Menu"
 
 [module/i3_mode]
 type = custom/script
-exec = ~/i3_mode.sh
+exec = bash $HOME/.local/bin/i3_mode.sh
 interval = 1
 label = %output%
 tooltip = "i3 Mode: %output%"
