--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -205,7 +205,7 @@ tooltip = "Temperature: %temperature-c%°C"
 
 [module/updates]
 type = custom/script
-exec = sh $HOME/.config/polybar/updates.sh
+exec = bash $HOME/.config/polybar/updates.sh
 interval = 180
 format = <label>
 label = %output%
