--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -17,7 +17,8 @@ font-3 = "Iosevka Nerd Font:size=12;3"
 modules-left = menu cpu memory temperature filesystem updates
 modules-center = workspaces
 modules-right = network ethernet bluetooth backlight alsa date i3_mode sysmenu
-height = 40
+height = 30
 width = 95%
 offset-x = 35
 offset-y = 10
+radius = 10.0
