--- a/ubuntu/.config/kitty/kitty.conf
+++ b/ubuntu/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Fonts
-font_family                     Maple Mono Regular
-bold_font                       Maple Mono Bold
-italic_font                     Maple Mono Italic
-bold_italic_font                Maple Mono BoldItalic
-font_size                       12.0
+font_family                     Maple Mono Regular, Fira Code, JetBrains Mono, Iosevka
+bold_font                       Maple Mono Bold, Fira Code Bold, JetBrains Mono Bold, Iosevka Bold
+italic_font                     Maple Mono Italic, Fira Code Italic, JetBrains Mono Italic, Iosevka Italic
+bold_italic_font                Maple Mono BoldItalic, Fira Code BoldItalic, JetBrains Mono BoldItalic, Iosevka BoldItalic
+font_size                       10.0
 
 # Include
 include                         $HOME/.config/kitty/colors.conf
