Added Arch Support - Bootstrap.sh

--- a/ubuntu/.config/kitty/kitty.conf
+++ b/ubuntu/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 # Fonts
-font_family                     Maple Mono Regular, Fira Code, JetBrains Mono, Iosevka
-bold_font                       Maple Mono Bold, Fira Code Bold, JetBrains Mono Bold, Iosevka Bold
-italic_font                     Maple Mono Italic, Fira Code Italic, JetBrains Mono Italic, Iosevka Italic
-bold_italic_font                Maple Mono BoldItalic, Fira Code BoldItalic, JetBrains Mono BoldItalic, Iosevka BoldItalic
+font_family                     Maple Mono, Fira Code, JetBrains Mono, Iosevka
+bold_font                       auto
+italic_font                     auto
+bold_italic_font                auto
 font_size                       10.0
 
 # Include
