--- a/linux/.config/i3/config.d/workspaces.conf
+++ b/linux/.config/i3/config.d/workspaces.conf
@@ -27,5 +27,5 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 assign [class="^Google-chrome$"] → $ws1
 assign [class="^Firefox$"] → $ws1
 assign [class="^Code$"] → $ws2
-assign [class="^Kitty$"] → $ws3
+assign [class="^kitty$"] → $ws3
 assign [class="^Slack$"] → $ws4
