--- a/linux/.config/kitty/kitty.conf
+++ b/linux/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Fonts
-font_family                     Maple Mono, Fira Code, JetBrains Mono, Iosevka
+font_family                     Maple Mono
 bold_font                       auto
 italic_font                     auto
 bold_italic_font                auto
-font_size                       10.0
+font_size                       18.0
 
 # Include
 include                         $HOME/.config/kitty/colors.conf
