--- a/linux/.config/i3/config.d/theme.conf
+++ b/linux/.config/i3/config.d/theme.conf
@@ -9,4 +9,4 @@ client.urgent           $red     $red        $base       $red         $red
 client.background       $base
 
 
-exec --no-startup-id feh --bg-fill -r -z $HOME/Pictures/Wallpapers
+exec --no-startup-id feh --bg-fill -r -z $HOME/.local/share/wallpapers
