--- a/linux/.config/hypr/hyprland.conf
+++ b/linux/.config/hypr/hyprland.conf
@@ -210,6 +210,6 @@ windowrule=float,^(imv)$
 windowrule=center,^(MuPDF)$
 windowrule=float,^(MuPDF)$
 windowrule=float,^(mpv)$
-windowrule=tile,^(foot)$
-windowrule=opacity 0.8 0.9,^(foot)$
+windowrule=tile,^(kitty)$
+windowrule=opacity 0.8 0.9,^(kitty)$
 layerrule = blur,launcher
