--- a/linux/.config/hypr/hyprlock.conf
+++ b/linux/.config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general {
 
 background {
     monitor =
-    path = $HOME/.local/share/wall.png
+    path = $HOME/.local/share/lock.png
     blur_size = 4
     blur_passes = 3 # 0 disables blurring
     noise = 0.0117
