--- a/linux/.config/hypr/hyprpaper.conf
+++ b/linux/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/.local/share/wall.png
+preload = ~/.local/share/wallpapers/1.png
 wallpaper = eDP-1,~/.local/share/wallpapers/1.png
 splash = false
 ipc = off
