--- a/linux/.config/polybar/modules.ini
+++ b/linux/.config/polybar/modules.ini
@@ -22,7 +22,7 @@ interval = 2
 format = <label>
 format-prefix = " "
 format-padding = 1
-label = %mb_used%
+label = %mb_free%
 tooltip = "Memory Usage: %mb_used% MB"
 
 [module/filesystem]
