--- a/linux/.config/picom.conf
+++ b/linux/.config/picom.conf
@@ -4,7 +4,8 @@
 
 # Backend to use: "xrender" or "glx"
 # "glx" provides better performance but requires a compatible GPU and driver.
-backend = "glx";
+# backend = "glx";
+backend = "xrender";
 
 # Enable/disable shadows
 shadow = true;
@@ -61,7 +62,10 @@ opacity-rule = [
 ];
 
 # Enable/disable vsync to prevent screen tearing
-vsync = true;
+# vsync = true;
+
+# Undirect fullscreen windows to avoid conflict
+unredir-if-possible = true;
 
 # Enable/disable window frame transparency
 frame-opacity = 0.90;
