--- a/linux/.config/i3/config.d/keybindings.conf
+++ b/linux/.config/i3/config.d/keybindings.conf
@@ -56,7 +56,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+Shift+s sticky toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym Alt+space focus mode_toggle
 
 # Focus the parent container
 bindsym $mod+a focus parent
@@ -64,4 +64,4 @@ bindsym $mod+a focus parent
 # focus the child container
 bindsym $mod+z focus child
 
-
+bindsym $mod+Shift+i exec ibus restart
