--- a/linux/.config/i3/config.d/monitors.conf
+++ b/linux/.config/i3/config.d/monitors.conf
@@ -10,4 +10,7 @@ exec_always --no-startup-id xrandr \
 
 # Assign Workspace default monitors
 workspace $ws1 output $home_monitor_left
+workspace $ws8 output $home_monitor_left
+
 workspace $ws2 output $home_monitor_right
+workspace $ws3 output $home_monitor_right
