--- a/linux/.config/i3/config.d/applications.conf
+++ b/linux/.config/i3/config.d/applications.conf
@@ -3,9 +3,9 @@ bindsym --release Print exec --no-startup-id "maim -p 0 -c 0.96,0.5,0.09 $HOME/P
 bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 
 # start rofi (a program launcher)
-bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/bin/launcher
+bindsym $mod+space exec --no-startup-id $HOME/.config/rofi/bin/launcher
 bindsym $mod+Shift+d exec --no-startup-id $HOME/.config/rofi/bin/runner
-bindsym Mod1+Tab exec --no-startup-id rofi -show window -theme $HOME/.config/rofi/config/launcher.rasi
+bindsym Alt+Tab exec --no-startup-id rofi -show window -theme $HOME/.config/rofi/config/launcher.rasi
 
 
 set $mode_apps 'Chrome (g), Slack (s), Code (c), Kitty (k)'
