--- a/linux/.config/i3/config.d/workspaces.conf
+++ b/linux/.config/i3/config.d/workspaces.conf
@@ -29,3 +29,4 @@ assign [class="^Firefox$"] → $ws1
 assign [class="^Code$"] → $ws2
 assign [class="^kitty$"] → $ws3
 assign [class="^Slack$"] → $ws4
+assign [class="^Spotify$"] → $ws8
