Refined for Ubuntu - I3

--- a/linux/.config/i3/config.d/applications.conf
+++ b/linux/.config/i3/config.d/applications.conf
@@ -7,6 +7,11 @@ bindsym $mod+space exec --no-startup-id $HOME/.config/rofi/bin/launcher
 bindsym $mod+Shift+d exec --no-startup-id $HOME/.config/rofi/bin/runner
 bindsym Alt+Tab exec --no-startup-id rofi -show window -theme $HOME/.config/rofi/config/launcher.rasi
 
+# Sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl set-sink-mute @DEFAULT_SINK@ 0
+# Max Sound
+bindsym Mod1+F12 exec pactl set-sink-mute 0 0 && pactl set-sink-volume 0 100%
+
 
 set $mode_apps 'Chrome (g), Slack (s), Code (c), Kitty (k)'
 bindsym $mod+x mode "$mode_apps"
