--- a/linux/.config/i3/config.d/autostart.conf
+++ b/linux/.config/i3/config.d/autostart.conf
@@ -13,9 +13,6 @@ exec --no-startup-id picom -b
 ## Power Manager
 exec --no-startup-id xfce4-power-manager
 
-# Max Sound
-bindsym Mod1+F12 exec pactl set-sink-mute 0 0 && pactl set-sink-volume 0 150%
-
 # Network Manager
 # Ensure the package 'network-manager-gnome' is installed
 exec --no-startup-id nm-applet &
@@ -35,7 +32,7 @@ exec --no-startup-id i3-msg 'exec slack'
 exec --no-startup-id i3-msg 'exec kitty'
 exec --no-startup-id i3-msg 'exec google-chrome'
 exec --no-startup-id i3-msg 'exec spotify'
-
+exec --no-startup-id i3-msg 'exec transmission-gtk'
 
 
 
