--- a/linux/.config/i3/config.d/workspaces.conf
+++ b/linux/.config/i3/config.d/workspaces.conf
@@ -29,4 +29,7 @@ assign [class="^Firefox$"] → $ws1
 assign [class="^Code$"] → $ws2
 assign [class="^kitty$"] → $ws3
 assign [class="^Slack$"] → $ws4
+assign [class="^gnome-system-monitor$"] → $ws5
+assign [class="^thunderbird-esr$"] → $ws6
+assign [class="^transmission-gtk$"] → $ws10
 assign [class="^Spotify$"] → $ws8
