Added some colors

--- a/linux/.config/i3/config.d/applications.conf
+++ b/linux/.config/i3/config.d/applications.conf
@@ -12,11 +12,17 @@ bindsym Mod1+Tab exec --no-startup-id $HOME/.config/rofi/bin/window_switcher
 # Sound
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl set-sink-mute @DEFAULT_SINK@ 0
 
+# Increase volume with PageUp
+bindsym Page_Up exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl set-sink-mute @DEFAULT_SINK@ 0
+
+# Decrease volume with PageDown
+bindsym Page_Down exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+
 # Max Sound
 bindsym Mod1+F12 exec pactl set-sink-mute 0 0 && pactl set-sink-volume 0 100%
 
 # Ctrl+shift+v to paste from clipboard
-bindsym Control+Shift+v exec --no-startup-id $HOME/.local/bin/clipboard.sh
+# bindsym Control+Shift+v exec --no-startup-id $HOME/.local/bin/clipboard.sh
 
 set $mode_apps 'Chrome (g), Slack (s), Code (c), Kitty (k)'
 bindsym $mod+x mode "$mode_apps"
