--- a/linux/.config/i3/config.d/autostart.conf
+++ b/linux/.config/i3/config.d/autostart.conf
@@ -33,10 +33,10 @@ exec --no-startup-id ibus-daemon &
 # Clipboard Manager
 # exec --no-startup-id clipman &
 
+exec --no-startup-id i3-msg 'exec google-chrome --profile-directory="Default"'
+exec --no-startup-id i3-msg 'exec firefox'
 exec --no-startup-id i3-msg 'exec code'
-exec --no-startup-id i3-msg 'exec slack'
 exec --no-startup-id i3-msg 'exec kitty'
-exec --no-startup-id i3-msg 'exec google-chrome'
 exec --no-startup-id i3-msg 'exec spotify'
 exec --no-startup-id i3-msg 'exec thunderbird'
 exec --no-startup-id i3-msg 'exec telegram-desktop'
@@ -44,8 +44,3 @@ exec --no-startup-id i3-msg 'exec transmission-gtk'
 exec --no-startup-id i3-msg 'exec gnome-system-monitor'
 exec --no-startup-id i3-msg 'exec thunar'
 exec --no-startup-id i3-msg 'exec zoom'
-
-
-
-
-
