--- a/linux/.config/i3/config.d/monitors.conf
+++ b/linux/.config/i3/config.d/monitors.conf
@@ -10,13 +10,13 @@ exec_always --no-startup-id xrandr \
 
 # Assign Workspace default monitors
 workspace $ws1 output $home_monitor_left
+workspace $ws2 output $home_monitor_left
+workspace $ws3 output $home_monitor_left
 workspace $ws4 output $home_monitor_left
-workspace $ws5 output $home_monitor_left
-workspace $ws6 output $home_monitor_left
-workspace $ws8 output $home_monitor_left
-workspace $ws10 output $home_monitor_left
+workspace $ws5 output $home_monitor_left-
 
-workspace $ws2 output $home_monitor_right
-workspace $ws3 output $home_monitor_right
+workspace $ws6 output $home_monitor_right
 workspace $ws7 output $home_monitor_right
+workspace $ws8 output $home_monitor_right
 workspace $ws9 output $home_monitor_right
+workspace $ws0 output $home_monitor_right
