--- a/linux/.config/i3/config.d/theme.conf
+++ b/linux/.config/i3/config.d/theme.conf
@@ -4,8 +4,8 @@ font pango:Maple Mono, Fira Code, Unifont, FontAwesome 10
 client.focused          $base    $base       $green      $mauve       $crust
 client.unfocused        $base    $base       $subtext0   $crust       $crust
 client.focused_inactive $base    $base       $subtext0   $crust       $crust
-client.urgent           $base    $base       $red        $crust          $crust
+client.urgent           $base    $base       $red        $crust       $crust
 client.background       $base
 
 
-exec --no-startup-id feh --bg-fill -r -z $HOME/.local/share/wallpapers
+exec --no-startup-id feh --bg-center -r -z $HOME/.local/share/wallpapers
