--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -1,18 +1,19 @@
 # i3 config file (v4)
-
 set $mod Mod4
 
 # Workspace
-set $ws1  "1:  "
-set $ws2  "2:  "
-set $ws3  "3:  "
-set $ws4  "4:  "
-set $ws5  "5:  "
-set $ws6  "6:  "
-set $ws7  "7:  "
-set $ws8  "8:  "
-set $ws9  "9:  "
-set $ws10 "10:  "
+
+set $ws1 "1:  Office"
+set $ws2 "2:  Home"
+set $ws3 "3:  Email"
+set $ws4 "4:  Chat"
+set $ws5 "5:  Monitor"
+
+set $ws6 "6:  Terminal"
+set $ws7 "7:  Code"
+set $ws8 "8:  Spotify"
+set $ws9 "9:  Files"
+set $ws0 "10:  Zoom"
 
 # Color scheme - catppuccino frappe
 set $rosewater #f2d5cf
