--- a/linux/.config/i3/config.d/statusbar.conf
+++ b/linux/.config/i3/config.d/statusbar.conf
@@ -1,27 +1,32 @@
 # Status bar settings
-set $height 36
+set $height 24
+
+
 bar {
-    status_command i3status
+    # status_command i3status
+    status_command i3blocks -c ~/.config/i3/i3blocks.conf
     position top
     font pango:Maple Mono, Fira Code, Unifont, FontAwesome 10
     separator_symbol " ■ "
     bindsym button4 nop
     bindsym button5 nop
     height $height
-    tray_padding 2
     strip_workspace_numbers yes
+    padding 2px
     # mode hide
     colors {
         statusline         $text
         background         $base
         separator          $red
         #                  BORDER       BACKGROUND   TEXT
-        focused_workspace  $text        $base        $text
-        inactive_workspace $base        $base        $subtext0
-        active_workspace   $base        $base        $red
+        focused_workspace  $base        $base        $green
+        inactive_workspace $base        $base        $mauve
+        active_workspace   $base        $base        $rosewater
         urgent_workspace   $base        $base        $red
-        binding_mode       $text        $base        $text
+        binding_mode       $base        $base        $lavender
     }
 }
+
 # Launch polybar
 # exec_always --no-startup-id ~/.config/polybar/launch.sh
+
