--- a/linux/.config/i3/config.d/workspaces.conf
+++ b/linux/.config/i3/config.d/workspaces.conf
@@ -8,7 +8,7 @@ bindsym $mod+6 workspace $ws6
 bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+bindsym $mod+0 workspace $ws0
 bindsym $mod+Tab workspace back_and_forth
 
 # Move focused container to workspace
@@ -21,21 +21,26 @@ bindsym $mod+Shift+6 move container to workspace $ws6
 bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+0 move container to workspace $ws0
 
 # Workspace assignment
+
+# Office
 assign [class="^Google-chrome$"] → $ws1
 assign [class="^Slack$"] → $ws1
-assign [class="^Firefox$"] → $ws1
 
-assign [class="^kitty$"] → $ws2
-assign [class="^Code$"] → $ws3
-assign [class="^thunderbird-esr$"] → $ws4
+# Home
+assign [class="^Firefox$"] → $ws2
+assign [class="^thunderbird-esr$"] → $ws3
 
-assign [class="^TelegramDesktop$"] → $ws5
-assign [class="^gnome-system-monitor$"] → $ws6
 
-assign [class="^zoom$"] → $ws7
+assign [class="^TelegramDesktop$"] → $ws4
+
+assign [class="^gnome-system-monitor$"] → $ws5
+
+assign [class="^kitty$"] → $ws6
+assign [class="^Code$"] → $ws7
 assign [class="^Spotify$"] → $ws8
 assign [class="^Thunar$"] → $ws9
-assign [class="^transmission-gtk$"] → $ws10
+assign [class="^transmission-gtk$"] → $ws9
+assign [class="^zoom$"] → $ws0
