--- a/linux/.config/picom.conf
+++ b/linux/.config/picom.conf
@@ -47,11 +47,15 @@ fade-out-step = 0.03;
 fade-exclude = [
     "class_g = 'XTerm'",
     "class_g = 'URxvt'",
-    "class_g = 'Kitty'"
+    "class_g = 'Kitty'",
+    "class_g = 'popup'",
+    "class_g = 'notification'",
+    "class_g = 'toolbar'",
+    "class_g = 'splash'",
 ];
 
 # Enable/disable transparency for inactive windows
-inactive-opacity = 0.90;
+inactive-opacity = 0.96;
 
 # Enable/disable transparency for active windows
 active-opacity = 1.0;
@@ -90,6 +94,10 @@ blur-background-exclude = [
     "window_type = 'desktop'",
     "class_g = 'zoom'",
     "name = 'zoom'",
+    "class_g = 'popup'",
+    "class_g = 'notification'",
+    "class_g = 'toolbar'",
+    "class_g = 'splash'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
