--- a/linux/.config/i3/config.d/applications.conf
+++ b/linux/.config/i3/config.d/applications.conf
@@ -10,16 +10,13 @@ bindsym $mod+Shift+p exec --no-startup-id $HOME/.config/rofi/bin/screenshot
 bindsym Mod1+Tab exec --no-startup-id $HOME/.config/rofi/bin/window_switcher
 
 # Sound
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl set-sink-mute @DEFAULT_SINK@ 0
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% && pkill --signal SIGRTMIN+12 i3blocks#increase sound volume
+bindsym Page_Up exec --no-startup-id pactl set-sink-volume 0 +5% && pkill --signal SIGRTMIN+12 i3blocks#increase sound volume
 
-# Increase volume with PageUp
-bindsym Page_Up exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl set-sink-mute @DEFAULT_SINK@ 0
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym Page_Down exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 
-# Decrease volume with PageDown
-bindsym Page_Down exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
-
-# Max Sound
-bindsym Mod1+F12 exec pactl set-sink-mute 0 0 && pactl set-sink-volume 0 100%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Ctrl+shift+v to paste from clipboard
 # bindsym Control+Shift+v exec --no-startup-id $HOME/.local/bin/clipboard.sh
