--- a/linux/.config/i3/config.d/statusbar.conf
+++ b/linux/.config/i3/config.d/statusbar.conf
@@ -7,13 +7,13 @@ bar {
     status_command i3blocks -c ~/.config/i3/i3blocks.conf
     position top
     font pango:Maple Mono, Fira Code, Unifont, FontAwesome 10
-    separator_symbol " ■ "
-    bindsym button4 nop
-    bindsym button5 nop
+    separator_symbol " "
+
     height $height
     strip_workspace_numbers yes
     padding 2px
     # mode hide
+
     colors {
         statusline         $text
         background         $base
