--- a/linux/.config/i3/config.d/floating_windows.conf
+++ b/linux/.config/i3/config.d/floating_windows.conf
@@ -3,6 +3,10 @@ floating_minimum_size -1 x -1
 floating_maximum_size -1 x -1
 
 for_window [class="^.*"] border pixel 0
+
+# Specific rule for ibus-daemon context menu
+for_window [class="Ibus-ui-gtk3"] floating enable, move position center
+
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="bubble"] floating enable
 for_window [window_role="task_dialog"] floating enable
